--- a/index.html
+++ b/index.html
@@ -1,16 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="stylesheet.css">
 </head>
+
 <body>
-    
+    <div class="page1">
+        <div class="nav-bar">
+            <div class="logo">
+                <img src="assets/logo-edp.gif" alt="#">
+            </div>
+            <div class="nav-list">
+                <h3 class="venue">OUR VENUES</h3>
+                <h3 class="career">CAREERS</h3>
+                <h3 class="menu">MENU</h3>
+            </div>
+        </div>
+    </div>
 
 
 
     <script src="javascript.js"></script>
 </body>
+
 </html>
